changeset/sales event/objects/Sales_Event__c.object
<CustomObject>
    <fields>
        <fullName>Accomodation_Requested__c</fullName>
        <label>Accomodation Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Before</fullName>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Events</relationshipLabel>
        <relationshipName>Sales_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Sales Events</relationshipLabel>
        <relationshipName>Sales_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dedupe_Key__c</fullName>
        <formula>CASESAFEID(Primary_Contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dedupe Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Event_Email_Template_Id__c</fullName>
        <label>Default Event Email Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_CZ__c</fullName>
        <label>Description CZ</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description_HU__c</fullName>
        <label>Description HU</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description_PL__c</fullName>
        <label>Description PL</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Did_Attend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did Attend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invitation_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invitation Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Accomodation_Possible__c</fullName>
        <label>Is Accomodation Possible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Online_Registration_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Online Registration Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Top_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Top Dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Web_Form__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)), &quot;salesforce.com&quot;, &quot;site.com&quot;), &quot;vf.force.com&quot;, &quot;my.site.com&quot;),&quot;--c&quot;,&quot;&quot;) 
+ &quot;SalesShow/s/?language=&quot; + CASE(TEXT(Language__c)
					,&quot;PL&quot;,&quot;pl&quot;
     ,&quot;US&quot;,&quot;en_US&quot;
					,&quot;HU&quot;,&quot;hu&quot;
					,&quot;CZ&quot;,&quot;cs&quot;
					,&quot;en_US&quot;)
 +&quot;&amp;recordId=&quot;+ Id
	+&quot;&amp;fz=true&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Web Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_People_With_Accomodation__c</fullName>
        <label>No. Of People With Accomodation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_People_Registered__c</fullName>
        <label>Number of People Registered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Form_Display_Name__c</fullName>
        <label>Online Form Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Events</relationshipLabel>
        <relationshipName>Sales_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionId__c</fullName>
        <formula>CASESAFEID( Primary_Contact__r.Account.Territory__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RegionId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <formula>Account__r.Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Event_For_RegionDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sales_Event__c.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Sales Event</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Event__c</referenceTo>
        <relationshipLabel>Regions Detailed Dates</relationshipLabel>
        <relationshipName>Regions_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Event_Name__c</fullName>
        <formula>IF(ISBLANK(Sales_Event_For_RegionDetail__r.Sales_Event__r.Name),Sales_Event__r.Name,Sales_Event_For_RegionDetail__r.Sales_Event__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sales_Event__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales Event</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Event__c</referenceTo>
        <relationshipLabel>Sales Events</relationshipLabel>
        <relationshipName>Sales_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Arrival_Date__c</fullName>
        <label>Selected Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Registration Open</fullName>
                </value>
                <value>
                    <fullName>Registration Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Sales Events</relationshipLabel>
        <relationshipName>Sales_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1_Full_Name__c</fullName>
        <label>1. Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Full_Name__c</fullName>
        <label>2. Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_Full_Name__c</fullName>
        <label>3. Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Event</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Events</pluralLabel>
    <recordTypes>
        <fullName>Sales_Event</fullName>
        <active>true</active>
        <label>Sales Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Event_Participant</fullName>
        <active>true</active>
        <label>Sales Event Participant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Event_Region_Detail</fullName>
        <active>true</active>
        <label>Sales Event Region Detail</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>